@@ -4,9 +4,13 @@ Enhancements:
 - #7143 Add ability to stop synergy on the login screen
 - #7157 | #7160 Synergy business accepts only business licenses
 
+Bug fixes:
+- #7144 Fix double lines when pasting text from Linux to Windows
+
 Github Actions:
 - #7148 Fix unstable build for windows core
 - #7156 Change binary storage server
+- #7161 Use brew bundle to install dependencies
 ===========
 
 v1.14.3-snapshot
